; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_sfb.c_sfb_suspendq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_sfb.c_sfb_suspendq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfb = type { i32, i32, %struct.ifnet* }
%struct.ifnet = type { i32 }

@SFBF_SUSPENDED = common dso_local global i32 0, align 4
@SFBF_FLOWCTL = common dso_local global i32 0, align 4
@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [69 x i8] c"%s: SFB qid=%d, unable to %s queue since flow-control is not enabled\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"suspend\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"resume\00", align 1
@ENOTSUP = common dso_local global i32 0, align 4
@classq_verbose = common dso_local global i64 0, align 8
@LOG_DEBUG = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [36 x i8] c"%s: SFB qid=%d, setting state to %s\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"SUSPENDED\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"RUNNING\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sfb_suspendq(%struct.sfb* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sfb*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.ifnet*, align 8
  store %struct.sfb* %0, %struct.sfb** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load %struct.sfb*, %struct.sfb** %5, align 8
  %10 = getelementptr inbounds %struct.sfb, %struct.sfb* %9, i32 0, i32 2
  %11 = load %struct.ifnet*, %struct.ifnet** %10, align 8
  store %struct.ifnet* %11, %struct.ifnet** %8, align 8
  %12 = load %struct.ifnet*, %struct.ifnet** %8, align 8
  %13 = icmp ne %struct.ifnet* %12, null
  %14 = zext i1 %13 to i32
  %15 = call i32 @VERIFY(i32 %14)
  %16 = load i64, i64* %7, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %3
  %19 = load %struct.sfb*, %struct.sfb** %5, align 8
  %20 = getelementptr inbounds %struct.sfb, %struct.sfb* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* @SFBF_SUSPENDED, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %35, label %25

25:                                               ; preds = %18, %3
  %26 = load i64, i64* %7, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %36, label %28

28:                                               ; preds = %25
  %29 = load %struct.sfb*, %struct.sfb** %5, align 8
  %30 = getelementptr inbounds %struct.sfb, %struct.sfb* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load i32, i32* @SFBF_SUSPENDED, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %36, label %35

35:                                               ; preds = %28, %18
  store i32 0, i32* %4, align 4
  br label %92

36:                                               ; preds = %28, %25
  %37 = load %struct.sfb*, %struct.sfb** %5, align 8
  %38 = getelementptr inbounds %struct.sfb, %struct.sfb* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = load i32, i32* @SFBF_FLOWCTL, align 4
  %41 = and i32 %39, %40
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %56, label %43

43:                                               ; preds = %36
  %44 = load i32, i32* @LOG_ERR, align 4
  %45 = load %struct.ifnet*, %struct.ifnet** %8, align 8
  %46 = call i32 @if_name(%struct.ifnet* %45)
  %47 = load %struct.sfb*, %struct.sfb** %5, align 8
  %48 = getelementptr inbounds %struct.sfb, %struct.sfb* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = load i64, i64* %7, align 8
  %51 = icmp ne i64 %50, 0
  %52 = zext i1 %51 to i64
  %53 = select i1 %51, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0)
  %54 = call i32 @log(i32 %44, i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str, i64 0, i64 0), i32 %46, i32 %49, i8* %53)
  %55 = load i32, i32* @ENOTSUP, align 4
  store i32 %55, i32* %4, align 4
  br label %92

56:                                               ; preds = %36
  %57 = load i64, i64* @classq_verbose, align 8
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %71

59:                                               ; preds = %56
  %60 = load i32, i32* @LOG_DEBUG, align 4
  %61 = load %struct.ifnet*, %struct.ifnet** %8, align 8
  %62 = call i32 @if_name(%struct.ifnet* %61)
  %63 = load %struct.sfb*, %struct.sfb** %5, align 8
  %64 = getelementptr inbounds %struct.sfb, %struct.sfb* %63, i32 0, i32 1
  %65 = load i32, i32* %64, align 4
  %66 = load i64, i64* %7, align 8
  %67 = icmp ne i64 %66, 0
  %68 = zext i1 %67 to i64
  %69 = select i1 %67, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0)
  %70 = call i32 @log(i32 %60, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.3, i64 0, i64 0), i32 %62, i32 %65, i8* %69)
  br label %71

71:                                               ; preds = %59, %56
  %72 = load i64, i64* %7, align 8
  %73 = icmp ne i64 %72, 0
  br i1 %73, label %74, label %80

74:                                               ; preds = %71
  %75 = load i32, i32* @SFBF_SUSPENDED, align 4
  %76 = load %struct.sfb*, %struct.sfb** %5, align 8
  %77 = getelementptr inbounds %struct.sfb, %struct.sfb* %76, i32 0, i32 0
  %78 = load i32, i32* %77, align 8
  %79 = or i32 %78, %75
  store i32 %79, i32* %77, align 8
  br label %91

80:                                               ; preds = %71
  %81 = load i32, i32* @SFBF_SUSPENDED, align 4
  %82 = xor i32 %81, -1
  %83 = load %struct.sfb*, %struct.sfb** %5, align 8
  %84 = getelementptr inbounds %struct.sfb, %struct.sfb* %83, i32 0, i32 0
  %85 = load i32, i32* %84, align 8
  %86 = and i32 %85, %82
  store i32 %86, i32* %84, align 8
  %87 = load %struct.sfb*, %struct.sfb** %5, align 8
  %88 = load i32*, i32** %6, align 8
  %89 = call i32 @qlen(i32* %88)
  %90 = call i32 @sfb_swap_bins(%struct.sfb* %87, i32 %89)
  br label %91

91:                                               ; preds = %80, %74
  store i32 0, i32* %4, align 4
  br label %92

92:                                               ; preds = %91, %43, %35
  %93 = load i32, i32* %4, align 4
  ret i32 %93
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @log(i32, i8*, i32, i32, i8*) #1

declare dso_local i32 @if_name(%struct.ifnet*) #1

declare dso_local i32 @sfb_swap_bins(%struct.sfb*, i32) #1

declare dso_local i32 @qlen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
